--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<a href="register.html">
 		<button type="button" id="registerButton" class="buttons m-1" onclick=""> Register </button>
 	</a>
-	<span id="loginResult"></span>
+	<div>
+		<span id="loginResult"></span>
+	</div>
 </div>
 
 </body>
