--- a/index.html
+++ b/index.html
@@ -8,19 +8,14 @@
 </head>
 <body>
 
-<h1 id="title">COPP Stack Demo</h1>
+<h1 id="title">Contact Manager Group 24</h1>
 
 <div id="loginDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
+	<span id="inner-title">Enter Username and Password</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
-	<a href="register.html">
-		<button type="button" id="registerButton" class="buttons m-1" onclick=""> Register </button>
-	</a>
-	<div>
-		<span id="loginResult"></span>
-	</div>
+	<span id="loginResult"></span>
 </div>
 
 </body>
