--- a/color.html
+++ b/color.html
@@ -2,7 +2,7 @@
 <head>
 	<title>COP 4331 LAMP Stack Demo</title>
 	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
+    <link href="css/color_styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
@@ -31,9 +31,26 @@
 	<p id="colorList">
 	</p><br /><br />
 
-	<input type="text" id="colorText" placeholder="Color To Add">
+	<!-- <input type="text" id="colorText" placeholder="Color To Add">
 	<button type="button" id="addColorButton" class="buttons" onclick="addColor();"> Add Color </button><br />
-	<span id="colorAddResult"></span>
+	<span id="colorAddResult"></span> -->
+
+	<button id="addContactModalOpen">Add Contact</button>
+
+<!-- The Modal -->
+<div id="addContactModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+   <input type="text" id="fName" placeholder="First Name">
+   <input type="text" id="lName" placeholder="Last Name">
+   <input type="text" id="phoneNumber" placeholder="Phone Number">
+	<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
+	<span id="contactAddResult"></span>
+  </div>
+
+</div>
 </div>
 
 </body>
