--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
-<html>
+<!-- <html>
 <head>
-	<title>COP Stack Demo</title>
+	<title>Contact Manager Group 24</title>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
+    <link href="style.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
-
 <h1 id="title">Contact Manager Group 24</h1>
-
 <div id="loginDiv">
-	<span id="inner-title">Enter Username and Password</span>
+	<span id="inner-title">PLEASE LOG IN</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
+	<a href="register.html">
+		<button type="button" id="registerButton" class="buttons m-1" onclick=""> Make an Account </button>
+	</a>
 	<span id="loginResult"></span>
+	<div>
+		<span id="loginResult"></span>
+	</div>
 </div>
 
 </body>
+</html> -->
+<html>
+	<head>
+		<title>Contact Manager Group 24</title>
+		<script type="text/javascript" src="js/md5.js"></script>
+		<script type="text/javascript" src="js/code.js"></script>
+		<link href="css/styles.css" rel="stylesheet">	
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	</head>
+	<div id="loginDiv">
+		<h3 id= "title">Sign In</h3>
+		<p id="inner-title">Sign in with your username and password</p>
+      	<input type="text" id="loginName" placeholder="Username" title="Username" /><br />
+		<input type="password" id="loginPassword" placeholder="Password"/><br />
+      	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
+        
+		<a href="register.html">
+          <button type = "button" id="registerButton"  class="linkers" onclick=""> Don't have an account? Click here to register! </button>
+      	</a>
+		<span id="loginResult"></span>
+		<div>
+		<span id="loginResult"></span>
+		</div>
+
+	</div>
 </html>
