--- a/index.html
+++ b/index.html
@@ -1,51 +1,31 @@
-<!-- <html>
-<head>
-	<title>Contact Manager Group 24</title>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="style.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-</head>
-<body>
-<h1 id="title">Contact Manager Group 24</h1>
-<div id="loginDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
-	<input type="text" id="loginName" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
-	<a href="register.html">
-		<button type="button" id="registerButton" class="buttons m-1" onclick=""> Make an Account </button>
-	</a>
-	<span id="loginResult"></span>
-	<div>
-		<span id="loginResult"></span>
-	</div>
-</div>
-
-</body>
-</html> -->
 <html>
 	<head>
-		<title>Contact Manager Group 24</title>
+		<title>Constant Contacts</title>
 		<script type="text/javascript" src="js/md5.js"></script>
 		<script type="text/javascript" src="js/code.js"></script>
 		<link href="css/styles.css" rel="stylesheet">	
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	</head>
-	<div id="loginDiv">
-		<h3 id= "title">Sign In</h3>
-		<p id="inner-title">Sign in with your username and password</p>
-      	<input type="text" id="loginName" placeholder="Username" title="Username" /><br />
-		<input type="password" id="loginPassword" placeholder="Password"/><br />
-      	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
-        
-		<a href="register.html">
-          <button type = "button" id="registerButton"  class="linkers" onclick=""> Don't have an account? Click here to register! </button>
-      	</a>
-		<span id="loginResult"></span>
-		<div>
-		<span id="loginResult"></span>
+	<body>
+		<div id="loginDiv">
+			<h3 id="title">Please Sign In</h3>
+			<div class="loginResultDiv">
+				<span id="loginResult"></span>
+			</div>
+			<div>
+				<span class="inlineBlock username">Username:</span>
+				<input class="block" type="text" id="loginName" placeholder="Username" title="Username" />
+			</div>
+			<div>
+				<span class="inlineBlock password">Password:</span>
+				<input class="block" type="password" id="loginPassword" placeholder="Password"/>
+			</div>
+			<button type="button" id="loginButton" class="loginButton" onclick="doLogin();"> Login </button>
+			<a href="register.html">
+				<div class="linkerDiv">
+					<span id="registerButton"  class="linkers inlineBlock" onclick=""> Don't have an account? Click here to register! </span>	
+				</div>
+			</a>
 		</div>
-
-	</div>
+	</body>
 </html>
