--- a/register.html
+++ b/register.html
@@ -1,27 +1,37 @@
 <html>
 <head>
-	<title>COP 4331 LAMP Stack Demo</title>
+	<title>Constant Contacts</title>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
-
-<div id="loginDiv">
-	<h3 id= "registerTitle">Please Register</h3>
-	<input class="registerFields" type="text" id="registerFirstName" placeholder="First Name" /><br />
-	<input class="registerFields" type="text" id="registerLastName" placeholder="Last Name" /><br />
-	<input class="registerFields" type="text" id="registerName" placeholder="Username" /><br />
-	<input class="registerFields" type="password" id="registerPassword" placeholder="Password"/><br />
-    <button type="button" id="registerButton" class="buttons" onclick="doRegister();"> Register </button>
-	<a href="index.html">
-		<button type="button" id="backButton" class="buttons m-1" onclick=""> Back </button>
-	</a>
-	<div>
-		<span class="m-1" id="registerResult"></span>
+	<div id="registerDiv">
+		<h3 id="title">Please Register</h3>
+		<div class="registerResultDiv">
+			<span id="registerResult"></span>
+		</div>
+		<div>
+			<span class="inlineBlock username">First Name:</span>
+			<input class="registerFields" type="text" id="registerFirstName" placeholder="First Name" />
+		</div>
+		<div>
+			<span class="inlineBlock username">Last Name:</span>
+			<input class="registerFields" type="text" id="registerLastName" placeholder="Last Name" />
+		</div>
+		<div>
+			<span class="inlineBlock username">Username:</span>
+			<input class="registerFields" type="text" id="registerName" placeholder="Username" />
+		</div>
+		<div>
+			<span class="inlineBlock username">Password:</span>
+			<input class="registerFields" type="password" id="registerPassword" placeholder="Password"/>
+		</div>
+		<button type="button" id="registerButton" class="registerButton" onclick="doRegister();"> Register </button>
+		<a href="index.html">
+			<button type="button" id="backButton" class="backButton m-1" onclick=""> Back </button>
+		</a>
 	</div>
-</div>
-
 </body>
 </html>
