--- a/color.html
+++ b/color.html
@@ -1,57 +1,63 @@
 <html>
-<head>
-	<title>COP 4331 LAMP Stack Demo</title>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/color_styles.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	
-	<script type="text/javascript">
-	document.addEventListener('DOMContentLoaded', function() 
-	{
-		readCookie();
-	}, false);
-	</script>
-	
-</head>
-<body>
+	<head>
+		<title>Constant Contacts</title>
+		<script type="text/javascript" src="js/code.js"></script>
+		<link href="css/color_styles.css" rel="stylesheet">	
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		
+		<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function() 
+		{
+			readCookie();
+		}, false);
+		</script>
+		
+	</head>
+	<body>
 
-<h1 id="title">COP 4331 LAMP Stack Demo</h1>
+		<h1 id="title">Constant Contacts</h1>
 
-<div id="loggedInDiv">
-	<span id="userName"></span><br />
-	<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
-</div>
+		<div id="contactDiv">
+			<div id="loggedInDiv">
+				<span id="userName"></span><br />
+				<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
+			</div>
 
-<div id="accessUIDiv">
-	<br />
+			<div id="accessUIDiv">
+				<br />
 
-	<input type="text" id="searchText" placeholder="Color To Search For"/>
-	<button type="button" id="searchColorButton" class="buttons" onclick="searchColor();"> Search Color </button><br />
-	<span id="colorSearchResult"></span>
-	<p id="colorList">
-	</p><br /><br />
+					<input type="text" id="searchText" placeholder="Color To Search For"/>
+					<button type="button" id="searchColorButton" class="buttons" onclick="searchColor();"> Search Color </button><br />
+					<span id="colorSearchResult"></span>
+					<p id="colorList">
+					</p><br /><br />
 
-	<!-- <input type="text" id="colorText" placeholder="Color To Add">
-	<button type="button" id="addColorButton" class="buttons" onclick="addColor();"> Add Color </button><br />
-	<span id="colorAddResult"></span> -->
+					<!-- <input type="text" id="colorText" placeholder="Color To Add">
+					<button type="button" id="addColorButton" class="buttons" onclick="addColor();"> Add Color </button><br />
+					<span id="colorAddResult"></span> -->
 
-	<button id="addContactModalOpen">Add Contact</button>
+					<!-- <a href="register.html">
+						<div class="linkerDiv">
+							<span id="registerButton"  class="linkers inlineBlock" onclick=""> Don't have an account? Click here to register! </span>	
+						</div>
+					</a> -->
+					<button id="addContactModalOpen" class="buttons">Add Contact</button>
 
-<!-- The Modal -->
-<div id="addContactModal" class="modal">
+				<!-- The Modal -->
+				<div id="addContactModal" class="modal"></div>
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-   <input type="text" id="fName" placeholder="First Name">
-   <input type="text" id="lName" placeholder="Last Name">
-   <input type="text" id="phoneNumber" placeholder="Phone Number">
-	<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
-	<span id="contactAddResult"></span>
-  </div>
+				<!-- Modal content -->
+				<div class="modal-content">
+					<span class="close">&times;</span>
+					<input type="text" id="fName" placeholder="First Name">
+					<input type="text" id="lName" placeholder="Last Name">
+					<input type="text" id="phoneNumber" placeholder="Phone Number">
+					<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
+					<span id="contactAddResult"></span>
+				</div>
+			</div>
 
-</div>
-</div>
+		</div>
 
-</body>
+	</body>
 </html>
