--- a/color.html
+++ b/color.html
@@ -25,9 +25,18 @@
 
 			<div id="accessUIDiv">
 				<br />
-
-					<input type="text" id="searchText" placeholder="Color To Search For"/>
-					<button type="button" id="searchColorButton" class="buttons" onclick="searchColor();"> Search Color </button><br />
+					<div>
+						<label for="field" id="searchId">Search By: </label>
+						<select name="field" id="data">
+							<option value="1">F. Name</option>
+							<option value="2">L. Name</option>
+							<option value="3">Phone</option>
+							<option value="4">Email</option>
+						</select>
+						<input type="text" id="searchText" placeholder="Input Search String"/>
+					
+					<button type="button" id="searchContactButton" class="buttons" onclick="searchContact();"> Search Contact </button><br />
+					</div>
 					<span id="colorSearchResult"></span>
 					<p id="colorList">
 					</p><br /><br />
@@ -36,25 +45,12 @@
 					<button type="button" id="addColorButton" class="buttons" onclick="addColor();"> Add Color </button><br />
 					<span id="colorAddResult"></span> -->
 
-					<!-- <a href="register.html">
-						<div class="linkerDiv">
-							<span id="registerButton"  class="linkers inlineBlock" onclick=""> Don't have an account? Click here to register! </span>	
-						</div>
-					</a> -->
-					<button id="addContactModalOpen" class="buttons">Add Contact</button>
-
-				<!-- The Modal -->
-				<div id="addContactModal" class="modal"></div>
-
-				<!-- Modal content -->
-				<div class="modal-content">
-					<span class="close">&times;</span>
-					<input type="text" id="fName" placeholder="First Name">
-					<input type="text" id="lName" placeholder="Last Name">
-					<input type="text" id="phoneNumber" placeholder="Phone Number">
-					<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
-					<span id="contactAddResult"></span>
-				</div>
+					
+				<a href="add.html">
+					<div class="linkerDiv">
+						<button type="button" id="addContactButton" class="buttons"> Add Contact </button>	
+					</div>
+				</a>
 			</div>
 
 		</div>
