--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <html>
-	<head>
-		<title>Constant Contacts</title>
+    <head>
+		<title>Royal Rolodex</title>
 		<script type="text/javascript" src="js/md5.js"></script>
 		<script type="text/javascript" src="js/code.js"></script>
 		<link href="css/styles.css" rel="stylesheet">	
-		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Ubuntu&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/icons8-crown-color-32.png">
 	</head>
-	<body>
-		<div id="loginDiv">
-			<h3 id="title">Please Sign In</h3>
-			<div class="loginResultDiv">
-				<span id="loginResult"></span>
-			</div>
-			<div>
-				<span class="inlineBlock username">Username:</span>
-				<input class="block" type="text" id="loginName" placeholder="Username" title="Username" />
-			</div>
-			<div>
-				<span class="inlineBlock password">Password:</span>
-				<input class="block" type="password" id="loginPassword" placeholder="Password"/>
-			</div>
-			<button type="button" id="loginButton" class="loginButton" onclick="doLogin();"> Login </button>
-			<a href="register.html">
-				<div class="linkerDiv">
-					<span id="registerButton"  class="linkers inlineBlock" onclick=""> Don't have an account? Click here to register! </span>	
-				</div>
-			</a>
-		</div>
-	</body>
+    <body>
+        <span id="title">Royal Rolodex</span>
+        <div class="linkerDiv">
+            <a href="login.html">
+                <div class="linkers inlineBlock"><span class="linket">Login</span></div>
+            </a>
+        </div>
+        <div class="linkerDiv">
+            <a href="login.html">
+                <div class="linkers inlineBlock"><span class="linket">Register</span></div>
+            </a>
+        </div>
+    </body>
 </html>
