--- a/register.html
+++ b/register.html
@@ -1,14 +1,17 @@
 <html>
 <head>
-	<title>Constant Contacts</title>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<title>Royal Rolodex</title>
+		<script type="text/javascript" src="js/md5.js"></script>
+		<script type="text/javascript" src="js/code.js"></script>
+		<link href="css/styles.css" rel="stylesheet">	
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Ubuntu&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/icons8-crown-color-32.png">
 </head>
 <body>
 	<div id="registerDiv">
-		<h3 id="title">Please Register</h3>
+		<span class="loginTitle">Please Register</span>
 		<div class="registerResultDiv">
 			<span id="registerResult"></span>
 		</div>
@@ -29,7 +32,7 @@
 			<input class="registerFields" type="password" id="registerPassword" placeholder="Password"/>
 		</div>
 		<button type="button" id="registerButton" class="registerButton" onclick="doRegister();"> Register </button>
-		<a href="index.html">
+		<a href="login.html">
 			<button type="button" id="backButton" class="backButton m-1" onclick=""> Back </button>
 		</a>
 	</div>
