--- a/add.html
+++ b/add.html
@@ -1,10 +1,13 @@
 <html>
 <head>
-	<title>Constant Contacts</title>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<title>Royal Rolodex</title>
+		<script type="text/javascript" src="js/md5.js"></script>
+		<script type="text/javascript" src="js/code.js"></script>
+		<link href="css/styles.css" rel="stylesheet">	
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Ubuntu&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/icons8-crown-color-32.png">
 </head>
 <body>
 	<div id="registerDiv">
@@ -29,7 +32,7 @@
 			<input class="registerFields" type="text" id="addEmail" placeholder="Email"/>
 		</div>
 		<button type="button" id="addContactButton" class="registerButton" onclick="addContact();"> Add </button>
-		<a href="color.html">
+		<a href="contacts.html">
 			<button type="button" id="backButton" class="backButton m-1" onclick=""> Back </button>
 		</a>
 	</div>
