--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 	</head>
     <body>
         <span id="title">Royal Rolodex</span>
+        <span id="subTitle">Contacts Fit For Royalty!</span>
         <div class="linkerDiv">
             <a href="login.html">
                 <div class="linkers inlineBlock"><span class="linket">Login</span></div>
             </a>
         </div>
         <div class="linkerDiv">
-            <a href="login.html">
+            <a href="register.html">
                 <div class="linkers inlineBlock"><span class="linket">Register</span></div>
             </a>
         </div>
