--- a/login.html
+++ b/login.html
@@ -16,19 +16,20 @@
 			<div class="loginResultDiv">
 				<span id="loginResult"></span>
 			</div>
-			<div>
+			<div style="margin-top: 20px;">
 				<span class="inlineBlock username">Username:</span>
 				<input class="block" type="text" id="loginName" placeholder="Username" title="Username" />
 			</div>
-			<div>
+			<div style="margin-top: 50px;">
 				<span class="inlineBlock password">Password:</span>
 				<input class="block" type="password" id="loginPassword" placeholder="Password"/>
 			</div>
 			<button type="button" id="loginButton" class="loginButton" onclick="doLogin();"> Login </button>
-			<a href="register.html">
-				<div class="linkerDiv">
-					<span id="registerButton"  class=" inlineBlock" onclick=""> Don't have an account? Click here to register! </span>	
-				</div>
+			<div class="linkerDiv" style="margin-top: 40px;" >
+				<a href="register.html">
+					<span class=" inlineBlock registerText" onclick=""> Don't have an account? Click here to register! </span>
+				</a>
+			</div>
 			</a>
 		</div>
 	</body>
