--- a/register.html
+++ b/register.html
@@ -10,8 +10,9 @@
         <link rel="icon" type="image/x-icon" href="/images/icons8-crown-color-32.png">
 </head>
 <body>
+	<span id="title" style="margin-top: 5px;">Royal Rolodex</span>
 	<div id="registerDiv">
-		<span class="loginTitle">Please Register</span>
+		<span class="registerTitle">Register</span>
 		<div class="registerResultDiv">
 			<span id="registerResult"></span>
 		</div>
@@ -19,15 +20,15 @@
 			<span class="inlineBlock username">First Name:</span>
 			<input class="registerFields" type="text" id="registerFirstName" placeholder="First Name" />
 		</div>
-		<div>
+		<div style="margin-top: 10px;">
 			<span class="inlineBlock username">Last Name:</span>
 			<input class="registerFields" type="text" id="registerLastName" placeholder="Last Name" />
 		</div>
-		<div>
+		<div style="margin-top: 10px;">
 			<span class="inlineBlock username">Username:</span>
 			<input class="registerFields" type="text" id="registerName" placeholder="Username" />
 		</div>
-		<div>
+		<div style="margin-top: 10px;">
 			<span class="inlineBlock username">Password:</span>
 			<input class="registerFields" type="password" id="registerPassword" placeholder="Password"/>
 		</div>
